javaDSL/src/test/resources/typeSystemTestModels/valid/fieldsAndLocalVars/FieldModifierAccessCombinations.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.fieldsAndLocalVars;

public class FieldModifierAllowedCombinations {
  public int n;
  private int nn;
  protected int nnn;

}
