javaDSL/src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/FieldModifiersNoDuplication.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.fieldsAndLocalVars;

public class FieldModifiersNoDuplication {
  public public int n;
  private private int nn;
  protected protected int nnn;

}
